  a non-empty directory in EmuCON. (RFB)

2014-10-11
- bios/kprint.c: Safer dopanic() when there is no basepage. (VRI)

2014-10-12
- cli/cmdint.c: The EmuCON type/cat command now handles both MSDOS- and
  Unix-style line endings. Suggested by Eero Tamminen. (RFB)
- cli/cmdint.c: Added 'more' command to EmuCON. Suggested by Eero Tamminen. (RFB)

2014-10-13
- cli/cmd.h cli/cmdint.c cli/cmdutil.c: Cosmetic improvements to EmuCON's
  help display. (RFB)
- cli/cmd.h cli/cmdutil.c: Code optimisation: use VT52 escape sequence
  instead of custom blank line routine. (RFB)
- cli/cmdint.c: Fix EmuCON bug: '-More-' msg was not blanked out during
  'more' display. (RFB)
- cli/cmd.h cli/cmdint.c cli/cmdmain.c cli/cmdutil.c: Fix bug: EmuCON issued
  a bogus error msg if a builtin cmd was passed the wrong number of arguments. (RFB)

2014-10-14
- cli/cmdint.c: Fix bug: 'more' command did not pause at the correct place
  for files larger than its i/o buffer. (RFB)
- cli/cmdint.c: Do not display 'interrupted' message when 'more' command
  output is interrupted. (RFB)

2014-10-20
- aes/gemdos.c aes/gemdos.h desk/aesbind.h desk/deskstart.S desk/desksupp.c
  desk/desksupp.h desk/desktop.def desk/desktop.rsc include/config.h:
  Double-clicking on a file not associated with an application now gets
  a 'Show file?' prompt (if enabled via CONF_WITH_SHOW_FILE). (RFB)
- cli/cmdasm.S: Fix latent bug: a2 was not saved in assembler function. (RFB)

2014-10-22
- aes/gemfmalt.c: Fix bug: alert buttons can overlap icon in resolutions
  with 8-pixel character heights. (RFB)
- aes/gemfmalt.c: Make source formatting consistent within module. (RFB)
- aes/optimopt.S: Code cleanup: remove unused code. (RFB)
- aes/optimopt.h aes/optimopt.S include/obdefs.h: Code optimisation: make
  r_set() a macro, saves time and space. (RFB)

2014-10-23
- desk/deskmain.c: Code optimisation: don't re-sort window contents when
  sort order doesn't change. (RFB)